[build-system]
requires = ["wheel", "setuptools", "versioningit", "attrs>=17.1"]
build-backend = "setuptools.build_meta"

[project]
name = "qjph"
dynamic = ["version"]
description = "Quick Json Parser Hack"
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "MIT"}

authors = [
  {name = "kagekirin", email = "kagekirin@gmail.com"},
]
maintainers = [
  {name = "kagekirin", email = "kagekirin@gmail.com"},
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: File Formats :: JSON",
  "Topic :: Software Development :: Libraries",
]


[project.urls]
Homepage = "https://github.com/KageKirin/py-qjph"
Documentation = "https://github.com/KageKirin/py-qjph"
Repository = "https://github.com/KageKirin/py-qjph.git"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
pythonpath = ["src"]
testpaths = [
  "tests",
]


[tool.setuptools.packages.find]
where = ["src/"]
include = ["qjph"]

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
